k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      nodeSelector:
        node-type: backend
      containers:
        - name: product-service
          image: rachana73/payment-service:latest  
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
